Add Github flavored Markdown stylesheet

--- a/src/editor/editor.html
+++ b/src/editor/editor.html
@@ -7,14 +7,14 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <!--  Custom CSS  -->
-    <link class="theme" rel="stylesheet" href="../theme/default/src/default.css">
+    <link class="theme" rel="stylesheet" href="../theme/default/dist/bundle.css">
 </head>
 <body>
     <div id="left">
         <textarea id="mdSource" autofocus></textarea>
     </div>
     <div id="right">
-        <div id="mdOutput"></div>
+        <div class="markdown" id="mdOutput"></div>
     </div>
 
     <!--  Base JS Lib  -->
