Improve default theme CSS

--- a/src/editor/editor.html
+++ b/src/editor/editor.html
@@ -14,7 +14,7 @@
         <textarea id="mdSource" autofocus></textarea>
     </div>
     <div id="right">
-        <div class="markdown" id="mdOutput"></div>
+        <div class="markdown-body" id="mdOutput"></div>
     </div>
 
     <!--  Base JS Lib  -->
