--- a/pages/editor/index.html
+++ b/pages/editor/index.html
@@ -10,7 +10,18 @@
     />
     <link
       rel="stylesheet"
-      href="../../node_modules/@highlightjs/cdn-assets/styles/github.min.css"
+      href="dark.css"
+      media="(prefers-color-scheme: dark)"
+    />
+    <link
+      rel="stylesheet"
+      media="(prefers-color-scheme: dark)"
+      href="../../node_modules/@highlightjs/cdn-assets/styles/atom-one-dark.min.css"
+    />
+    <link
+      rel="stylesheet"
+      media="(prefers-color-scheme: light)"
+      href="../../node_modules/@highlightjs/cdn-assets/styles/atom-one-light.min.css"
     />
     <link rel="stylesheet" href="../../node_modules/katex/dist/katex.min.css" />
     <link rel="stylesheet" href="style.css" />
